--- a/view/chat/page.html
+++ b/view/chat/page.html
@@ -12,31 +12,17 @@
     </script>
 
     <script>
-        /*crypto-js*/
+        /*crypto-js.js*/
     </script>
 
-
     <style>
-        #chat {
-            overflow-y: auto;
-        }
-
-        #chat::-webkit-scrollbar {
-            width: 12px;
-        }
-
-        #chat::-webkit-scrollbar-track {
-            background: rgb(33, 37, 41);
-        }
-
-        #chat::-webkit-scrollbar-thumb {
-            background-color: #6c757d;
-            border-radius: 20px;
-        }
+        /*style.css*/
     </style>
-    <title>chat</title>
+
+    <title>CryptoMessage</title>
 </head>
 <body class="bg-black text-white">
+
 <!--    Header    -->
 <div class="position-fixed start-0 top-0 end-0">
     <div class="container p-3 pt-2 pb-2 bg-dark rounded-bottom d-flex justify-content-between">
