--- a/view/chat/page.html
+++ b/view/chat/page.html
@@ -24,11 +24,20 @@
 <body class="bg-light">
 
 <!--    Header    -->
-<div class="position-fixed start-0 top-0 end-0 text-white">
+<div class="position-fixed start-0 top-0 end-0 text-white z-3">
     <div class="container p-3 pt-2 pb-2 bg-dark rounded-bottom d-flex justify-content-between">
         <div>User: <span id="name">Загрузка...</span></div>
-        <div>Room key: <span id="room_key">Загрузка...</span></div>
-
+        <div class="d-flex">
+            <div class="dropdown">
+                <span class="dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                      aria-expanded="false">
+                    Участников: <span id="amountOfMembers">Загрузка...</span>
+                </span>
+                <ul class="dropdown-menu" id="usersActivity">
+                </ul>
+            </div>
+            <div class="ms-5">Room key: <span id="room_key">Загрузка...</span></div>
+        </div>
     </div>
 </div>
 
@@ -37,11 +46,7 @@
 <div class="position-fixed bottom-0 start-0 top-0 end-0">
     <div class="h-100 pb-5 pt-5">
         <div class="h-100 pb-5">
-            <div id="chat" class="container rounded border-dark border mb-5 h-50">
-                <div>Загрузка...</div>
-            </div>
-
-            <div id="usersActivity" class="container rounded border-dark border mb-5 h-50">
+            <div id="chat" class="container rounded border-dark border mb-5 h-100">
                 <div>Загрузка...</div>
             </div>
         </div>
@@ -63,6 +68,7 @@
 </div>
 
 <script>
+    /*popper.js*/
     /*vars.js*/
     /*encryption.js*/
     /*socket.js*/
