--- a/view/chat/page.html
+++ b/view/chat/page.html
@@ -26,7 +26,10 @@
 <!--    Header    -->
 <div class="position-fixed start-0 top-0 end-0 text-white z-3">
     <div class="container p-3 pt-2 pb-2 bg-dark rounded-bottom d-flex justify-content-between">
-        <div>User: <span id="name">Загрузка...</span></div>
+        <div class="d-flex">
+            <a href="/" class="text-white text-decoration-none">< Выйти</a>
+            <div class="ms-2">User: <span id="name">Загрузка...</span></div>
+        </div>
         <div class="d-flex">
             <div class="dropdown">
                 <span class="dropdown-toggle" type="button" data-bs-toggle="dropdown"
