--- a/view/chat/page.html
+++ b/view/chat/page.html
@@ -27,19 +27,19 @@
 <div class="position-fixed start-0 top-0 end-0 text-white z-3">
     <div class="container p-3 pt-2 pb-2 bg-dark rounded-bottom d-flex justify-content-between">
         <div class="d-flex">
-            <a href="/" class="text-white text-decoration-none">< Выйти</a>
-            <div class="ms-2">User: <span id="name">Загрузка...</span></div>
+            <a href="/" class="text-white text-decoration-none">< Exit</a>
+            <div class="ms-2">User: <span id="name">Loading...</span></div>
         </div>
         <div class="d-flex">
             <div class="dropdown">
                 <span class="dropdown-toggle" type="button" data-bs-toggle="dropdown"
                       aria-expanded="false">
-                    Участников: <span id="amountOfMembers">Загрузка...</span>
+                    Members: <span id="amountOfMembers">Loading...</span>
                 </span>
                 <ul class="dropdown-menu" id="usersActivity">
                 </ul>
             </div>
-            <div class="ms-5">Room key: <span id="room_key">Загрузка...</span></div>
+            <div class="ms-5">Room key: <span id="room_key">Loading...</span></div>
         </div>
     </div>
 </div>
@@ -50,7 +50,7 @@
     <div class="h-100 pb-5 pt-5">
         <div class="h-100 pb-5">
             <div id="chat" class="container rounded border-dark border mb-5 h-100">
-                <div>Загрузка...</div>
+                <div>Loading...</div>
             </div>
         </div>
     </div>
